update various stylistic issues with the accordion on mobile

--- a/components/form/body/row/AccordionContent.module.scss
+++ b/components/form/body/row/AccordionContent.module.scss
@@ -5,7 +5,12 @@
   @media (max-width: $mobile-max) {
     flex-direction: column;
     border-left: 6px solid $bronx-orange;
+
+    .accordionContentLeft {
+      display: none;
+    }
   }
+
 }
 
 .accordionTopMobile {
@@ -18,17 +23,20 @@
   flex-direction: column;
   background-color: $white;
 
-  .lineBreak {
-    border-top: 1px solid $gray-200;
-    width: 92%;
-    margin: 20px auto;
+  .mobileAccordionInputWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: $color-base;
+    width: 90%;
+    border-radius: 8px;
   }
 
   .mobileAccordionInputs {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 90%;
+    width: 100%;
   }
 
 }
@@ -44,7 +52,7 @@
 }
 
 .mobileLabelAllocate {
-  padding-top: 20px;
+  padding-top: 8px;
 }
 
 .mobileLabelDetails {
@@ -52,7 +60,7 @@
   background-color: $white;
 }
 
-.accordionContentLeft {
+.accordionContentLeft, .accordionContentDepartmentDetails {
   @extend %form-row-flex-child-left;
   padding-top: 16px;
   padding-bottom: 32px;
@@ -68,6 +76,9 @@
     font-size: 16px;
     line-height: 20px;
     padding-top: 32px;
+    @media (max-width: $mobile-max) {
+      padding-top: 16px;
+    }
   }
 
   label {
@@ -76,6 +87,10 @@
     padding-bottom: 8px;
     font-size: 16px;
     line-height: 28px;
+    @media (max-width: $mobile-max) {
+      font-size: 12px;
+      padding-bottom: 0px;
+    }
   }
 
   .mobileDetail {
@@ -94,6 +109,8 @@
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     background-color: $white;
+    padding-top: 24px;
+    padding-bottom: 0px;
   }
 
   p {
