--- a/components/form/body/row/Text.module.scss
+++ b/components/form/body/row/Text.module.scss
@@ -17,6 +17,8 @@
       font-size: 32px;
       color: $blue-900;
       width: 90px;
+      background: none;
+      font-weight: 600;
     }
   }
 
